--- a/index.html
+++ b/index.html
@@ -15337,8 +15337,8 @@ b
 <li><a href="https://github.com/gmorgachev/python_intro/blob/master/computation_math.ipynb">Вычматы</a></li>
 <li>Обработка лабораторной: <a href="https://github.com/gmorgachev/python_intro/tree/master/lab_1.2">исходники</a>, 
   <a href="lab_1.2/report.html">отчет</a></li>
-<li><a href="https://gmorgachev.github.io/python_intro/">Этот сайт</a></li>
-<li><a href="https://github.com/gmorgachev/python_intro">https://github.com/gmorgachev/python_intro</a> - репозиторий</li>
+<li><a href="https://gmorgachev.github.io/python_intro/">gmorgachev.github.io/python_intro</a> - этот сайт</li>
+<li><a href="https://github.com/gmorgachev/python_intro">github.com/gmorgachev/python_intro</a> - репозиторий</li>
 </ul>
 
 </div>
