--- a/index.html
+++ b/index.html
@@ -11931,7 +11931,7 @@ a.anchor-link {
 
 </div>
 </div>
-</div><div class="fragment">
+</div></section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
@@ -11944,7 +11944,7 @@ a.anchor-link {
 
 </div>
 </div>
-</div></div></section></section><section><section>
+</div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
@@ -13313,16 +13313,16 @@ b
 </div>
 </div>
 
-</div></div><div class="fragment">
+</div></div></section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Именованный арументы можно менять местами</p>
+<p>Именованные арументы можно менять местами</p>
 
 </div>
 </div>
-</div></div><div class="fragment">
+</div><div class="fragment">
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[103]:</div>
@@ -13397,18 +13397,19 @@ b
 
 </div>
 </div>
-</div><div class="fragment">
+</div></section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="&#1056;&#1077;&#1089;&#1091;&#1088;&#1089;&#1099;">&#1056;&#1077;&#1089;&#1091;&#1088;&#1089;&#1099;<a class="anchor-link" href="#&#1056;&#1077;&#1089;&#1091;&#1088;&#1089;&#1099;">&#182;</a></h3><ul>
 <li><a href="https://docs.scipy.org/doc/numpy-1.15.1/user/quickstart.html">https://docs.scipy.org/doc/numpy-1.15.1/user/quickstart.html</a> - введение</li>
+<li><a href="https://docs.scipy.org/doc/numpy-1.13.0/reference/">https://docs.scipy.org/doc/numpy-1.13.0/reference/</a> - документация</li>
 </ul>
 
 </div>
 </div>
-</div></div></section><section>
+</div></section><section>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[104]:</div>
@@ -13507,7 +13508,7 @@ b
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="&#1053;&#1077;&#1082;&#1086;&#1090;&#1086;&#1088;&#1099;&#1077;-&#1087;&#1088;&#1086;&#1089;&#1090;&#1077;&#1096;&#1080;&#1077;-&#1086;&#1087;&#1077;&#1088;&#1072;&#1094;&#1080;&#1080;">&#1053;&#1077;&#1082;&#1086;&#1090;&#1086;&#1088;&#1099;&#1077; &#1087;&#1088;&#1086;&#1089;&#1090;&#1077;&#1096;&#1080;&#1077; &#1086;&#1087;&#1077;&#1088;&#1072;&#1094;&#1080;&#1080;<a class="anchor-link" href="#&#1053;&#1077;&#1082;&#1086;&#1090;&#1086;&#1088;&#1099;&#1077;-&#1087;&#1088;&#1086;&#1089;&#1090;&#1077;&#1096;&#1080;&#1077;-&#1086;&#1087;&#1077;&#1088;&#1072;&#1094;&#1080;&#1080;">&#182;</a></h3>
+<h3 id="&#1053;&#1077;&#1082;&#1086;&#1090;&#1086;&#1088;&#1099;&#1077;-&#1087;&#1088;&#1086;&#1089;&#1090;&#1077;&#1081;&#1096;&#1080;&#1077;-&#1086;&#1087;&#1077;&#1088;&#1072;&#1094;&#1080;&#1080;">&#1053;&#1077;&#1082;&#1086;&#1090;&#1086;&#1088;&#1099;&#1077; &#1087;&#1088;&#1086;&#1089;&#1090;&#1077;&#1081;&#1096;&#1080;&#1077; &#1086;&#1087;&#1077;&#1088;&#1072;&#1094;&#1080;&#1080;<a class="anchor-link" href="#&#1053;&#1077;&#1082;&#1086;&#1090;&#1086;&#1088;&#1099;&#1077;-&#1087;&#1088;&#1086;&#1089;&#1090;&#1077;&#1081;&#1096;&#1080;&#1077;-&#1086;&#1087;&#1077;&#1088;&#1072;&#1094;&#1080;&#1080;">&#182;</a></h3>
 </div>
 </div>
 </div><div class="fragment">
@@ -13891,7 +13892,7 @@ b
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="&#1056;&#1077;&#1096;&#1077;&#1085;&#1080;&#1077;-&#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1099;-&#1083;&#1080;&#1085;&#1077;&#1081;&#1085;&#1099;&#1093;-&#1091;&#1088;&#1072;&#1074;&#1085;&#1077;&#1085;&#1080;&#1077;">&#1056;&#1077;&#1096;&#1077;&#1085;&#1080;&#1077; &#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1099; &#1083;&#1080;&#1085;&#1077;&#1081;&#1085;&#1099;&#1093; &#1091;&#1088;&#1072;&#1074;&#1085;&#1077;&#1085;&#1080;&#1077;<a class="anchor-link" href="#&#1056;&#1077;&#1096;&#1077;&#1085;&#1080;&#1077;-&#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1099;-&#1083;&#1080;&#1085;&#1077;&#1081;&#1085;&#1099;&#1093;-&#1091;&#1088;&#1072;&#1074;&#1085;&#1077;&#1085;&#1080;&#1077;">&#182;</a></h3><p>$$ Ax = b$$</p>
+<h3 id="&#1056;&#1077;&#1096;&#1077;&#1085;&#1080;&#1077;-&#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1099;-&#1083;&#1080;&#1085;&#1077;&#1081;&#1085;&#1099;&#1093;-&#1091;&#1088;&#1072;&#1074;&#1085;&#1077;&#1085;&#1080;&#1081;">&#1056;&#1077;&#1096;&#1077;&#1085;&#1080;&#1077; &#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1099; &#1083;&#1080;&#1085;&#1077;&#1081;&#1085;&#1099;&#1093; &#1091;&#1088;&#1072;&#1074;&#1085;&#1077;&#1085;&#1080;&#1081;<a class="anchor-link" href="#&#1056;&#1077;&#1096;&#1077;&#1085;&#1080;&#1077;-&#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1099;-&#1083;&#1080;&#1085;&#1077;&#1081;&#1085;&#1099;&#1093;-&#1091;&#1088;&#1072;&#1074;&#1085;&#1077;&#1085;&#1080;&#1081;">&#182;</a></h3><p>$$ Ax = b$$</p>
 
 </div>
 </div>
@@ -14175,7 +14176,7 @@ b
 <ul>
 <li>Библиотека для работы с массивами данных</li>
 <li>Подходит для нечисловых данных</li>
-<li>Можно посмотреть на данных глазами</li>
+<li>Можно посмотреть на данные глазами</li>
 <li>Красивые таблички</li>
 </ul>
 
